# inventory-management-service

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  hello.py  manage.py  mypy.ini  pyproject.toml  ruff.toml
inventory_management_service/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: details.html  index.html
