[project]
name = "inventory-management-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "psycopg>=3.2.4",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "django-stubs>=5.1.3",
    "ruff>=0.9.5",
    "pre-commit>=4.1.0",
]
